--- a/css/st-ui.css
+++ b/css/st-ui.css
@@ -81,6 +81,8 @@ input::-webkit-input-placeholder {
     width: 50%;
     height: 100%;
     float: left;
+    position: relative;
+    z-index: 333;
 }
 
 .st_navbar_logo {
@@ -147,34 +149,6 @@ a:hover {
     background: #888888;
 }
 
-.st_body_box {
-    width: 100%;
-    background: #F8F8F8;
-    position: relative;
-}
-
-.st_navbar_list_phone {
-    width: 90%;
-    margin: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: none;
-}
-
-.st_navbar_list_phone li {
-    list-style: none;
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-/* .st_body {
-    width: 100%;
-    height: 92vh;
-    background: white;
-    position: absolute;
-    top: 0;
-} */
-
 /**
  中等屏幕 桌面显示器(笔记本)
  */
@@ -197,10 +171,6 @@ a:hover {
     }
     .st_navbar_list_btn {
         display: block;
-    }
-    .st_navbar_list_phone {
-        display: block;
-        border-top: 1px solid #DDDDDD;
     }
 }
 
